# starlette_flash

./: .pre-commit-config.yaml  CONTRIBUTING.rst  README.md  pyproject.toml
.github/workflows/: lint.yml  lint_and_test.yml  publish.yml  qa.yml
examples/: app.py
examples/templates/: index.html
starlette_flash/: __init__.py  flash.py
starlette_flash/templates/starlette_flash/: flash_messages.html
tests/: test_flash.py
