[tool.poetry]
name = "starlette_flash"
description = "Flash messages for Starlette framework."
version = "1.1.0"
authors = ["Alex Oleshkevich <alex.oleshkevich@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/alex-oleshkevich/starlette_flash"
repository = "https://github.com/alex-oleshkevich/starlette_flash"
documentation = "https://github.com/alex-oleshkevich/starlette_flash"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[tool.poetry.dependencies]
python = "^3.10.0"


[tool.poetry.group.dev.dependencies]
starlette = "*"
pytest = "^8.0"
pytest-asyncio = "^0.23"
pytest-cov = "^4.0"
mypy = "^1"
httpx = "^0.23.0"
uvicorn = "^0.18.3"
itsdangerous = "^2.1.2"
python-multipart = "^0.0.5"
Jinja2 = "^3.1.2"
ruff = "^0.1.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.coverage.run]
branch = true
source = ["starlette_flash", "tests"]
omit = [".venv/*", ".git/*", "examples/*"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.mypy]
files = ["starlette_flash", "examples", "tests"]
pretty = true
strict = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = 'auto'
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [
    "node_modules", "frontend", "storage", "dist", ".git",
    "*/migrations/*", "*/static/*", "docs", ".venv"
]
addopts = "--tb=short -s --no-cov-on-fail"
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.ruff]
exclude = [
    ".egg",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
