[project]
name = "starlette_flash"
version = "1.1.0"
description = "Flash messages for Starlette framework."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Alex Oleshkevich", email = "alex.oleshkevich@gmail.com" }]
requires-python = ">=3.10"
keywords = ["starlette", "flash", "flash-messages", "web", "async", "session"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/alex-oleshkevich/starlette_flash"
Repository = "https://github.com/alex-oleshkevich/starlette_flash"
Documentation = "https://github.com/alex-oleshkevich/starlette_flash"

[dependency-groups]
dev = [
    "starlette",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.1",
    "mypy>=1.19.1",
    "httpx>=0.28.1",
    "uvicorn>=0.41.0",
    "itsdangerous>=2.2.0",
    "python-multipart>=0.0.22",
    "Jinja2>=3.1.6",
    "ruff>=0.15.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.coverage.run]
branch = true
source = ["starlette_flash", "tests"]
omit = [".venv/*", ".git/*", "examples/*"]

[tool.coverage.report]
exclude_also = [
    "pragma: no cover",
    "raise NotImplementedError"
]

[tool.mypy]
files = ["starlette_flash", "examples", "tests"]
pretty = true
strict = true
show_error_context = true
show_column_numbers = true
show_error_codes = true

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = 'auto'
python_files = ["tests.py", "test_*.py", "*_tests.py"]
norecursedirs = [
    "node_modules", "frontend", "storage", "dist", ".git",
    "*/migrations/*", "*/static/*", "docs", ".venv"
]
addopts = "--tb=short -s --no-cov-on-fail"
testpaths = ["tests"]
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

[tool.ruff]
exclude = [
    ".egg",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
]
line-length = 120
indent-width = 4

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.format]
skip-magic-trailing-comma = false
